--- a/MCC-simulations.Rmd
+++ b/MCC-simulations.Rmd
@@ -192,6 +192,29 @@ return(list(fdr = fdr, power = pwr))
 }
 ```
 
+```{r}
+run_sarkar_tang_method2_mcc_simulation <- function(type = 'MCC', n, d, a, num_true_sigs, alpha = .05, num_iter = 500){
+  # Sets up the regression problem with specified dimensions and number of true signals, all of which have
+  # the same amplitude. 
+  fdp_vec <- numeric(num_iter)
+pwr_vec <- c(num_iter)
+for (m in 1:num_iter){
+  feature_indices <- 1:d
+  regression <- get_mcc_regression_model(type = type, n = n, d = d, a = a, num_true_signals = num_true_sigs)
+  true_nonzero_indices <- regression$nonzero_indices
+  rejected_indices <- sarkar_tang_method2(regression$X, regression$Y, alpha = alpha)
+  num_rejections <- length(rejected_indices)
+  num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
+  num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
+  fdp_vec[m] <- num_false_rejections / max(num_rejections, 1)
+  pwr_vec[m] <- num_correct_rejections / max(length(true_nonzero_indices), 1)
+}
+fdr <- mean(fdp_vec)
+pwr <- mean(pwr_vec)
+return(list(fdr = fdr, power = pwr))
+}
+```
+
 
 ```{r}
 run_bh_mcc_simulation <- function(type = 'MCC', n, d, a, num_true_sigs, alpha = .05, num_iter = 500){
@@ -333,7 +356,33 @@ return(list(fdr = fdr, power = pwr))
 }
 ```
 
-
+```{r}
+run_dbh_mcc_simulation <- function(type = 'MCC', n, d, a, num_true_sigs, alpha = .05, num_iter = 500){
+  # Sets up the regression problem with specified dimensions and number of true signals, all of which have
+  # the same amplitude. 
+  fdp_vec <- numeric(num_iter)
+pwr_vec <- c(num_iter)
+for (m in 1:num_iter){
+  feature_indices <- 1:d
+  regression <- get_mcc_regression_model(type = type, n = n, d = d, a = a, num_true_signals = num_true_sigs)
+  true_nonzero_indices <- regression$nonzero_indices
+  rejected_indices <- dBH_lm(regression$Y, 
+                             regression$X, 
+                             intercept = FALSE, 
+                             side = 'two', 
+                             alpha = alpha, 
+                             avals_type = 'BH')$initrejs
+  num_rejections <- length(rejected_indices)
+  num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
+  num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
+  fdp_vec[m] <- num_false_rejections / max(num_rejections, 1)
+  pwr_vec[m] <- num_correct_rejections / max(length(true_nonzero_indices), 1)
+}
+fdr <- mean(fdp_vec)
+pwr <- mean(pwr_vec)
+return(list(fdr = fdr, power = pwr))
+}
+```
 
 # Setting simulation functions for each method
 
@@ -353,6 +402,40 @@ run_sarkar_tang_method1_mcc_lfl_setting_simulation <- function(type = 'MCC', a_v
   for (amp in a_vec){
     for (alp in alpha){
       result <- run_sarkar_tang_method1_mcc_simulation(type = type,
+                                                       n = 1000,
+                                                       d = 100,
+                                                       a = amp, 
+                                                       num_true_sigs = 10,
+                                                       alpha = alp,
+                                                       num_iter = num_iter)
+      # Store the results in a list
+      result_list[[paste("a", amp, "alpha", alp, sep = "_")]] <- data.frame(a = amp, alpha = alp, power = result$power, fdr = result$fdr)
+    }
+  }
+  
+  # Combine all results into a single data frame
+  result_df <- do.call(rbind, result_list)
+  return(result_df)
+}
+
+```
+
+```{r}
+run_sarkar_tang_method2_mcc_lfl_setting_simulation <- function(type = 'MCC', a_vec = c(2, 4, 6, 8, 10), 
+                                                               alpha = .05, 
+                                                               num_iter = 500){
+  # Ensure alpha is a vector
+  if (is.numeric(alpha) && length(alpha) == 1) {
+    alpha <- c(alpha)
+  }
+  
+  # Initialize result lists
+  result_list <- list()
+  
+  # Iterate over combinations of a_vec and alpha
+  for (amp in a_vec){
+    for (alp in alpha){
+      result <- run_sarkar_tang_method2_mcc_simulation(type = type,
                                                        n = 1000,
                                                        d = 100,
                                                        a = amp, 
@@ -553,6 +636,41 @@ run_CKnockoffs_mcc_lfl_setting_simulation <- function(type = 'MCC',
 ```
 
 
+```{r}
+run_dbh_mcc_lfl_setting_simulation <- function(type = 'MCC', 
+                                                      a_vec = c(2, 4, 6, 8, 10), 
+                                                      alpha = .05,
+                                                      num_iter = 500){
+  # Ensure alpha is a vector
+  if (is.numeric(alpha) && length(alpha) == 1) {
+    alpha <- c(alpha)
+  }
+  
+  # Initialize result lists
+  result_list <- list()
+  
+  # Iterate over combinations of a_vec and alpha
+  for (amp in a_vec){
+    for (alp in alpha){
+      result <- run_dbh_mcc_simulation(type = type,
+                                                       n = 1000,
+                                                       d = 100,
+                                                       a = amp,
+                                                       num_true_sigs = 10,
+                                                       alpha = alp,
+                                                       num_iter = num_iter)
+      # Store the results in a list
+      result_list[[paste("a", amp, "alpha", alp, sep = "_")]] <- data.frame(a = amp, alpha = alp, power = result$power, fdr = result$fdr)
+    }
+  }
+  
+  # Combine all results into a single data frame
+  result_df <- do.call(rbind, result_list)
+  return(result_df)
+}
+```
+
+
 # small scale - trying to get a rough calibration of the BH
 
 we choose $\beta^*$ such that base BH with $\alpha = .20$ has power of about 35% for the setting. In some of the experiments below, we approximated the power to be 50%, but in the full scale simulation, the power ended up being 35%. 
@@ -565,7 +683,61 @@ set.seed(17)
 run_bh_mcc_lfl_setting_simulation(a_vec = c(3.63), alpha = .2, num_iter = 200)
 ```
 
-mcc calibration is $\beta^* \approx 3.63$. 
+```{r}
+set.seed(18)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.7, 3.8), alpha = .2, num_iter = 400)
+```
+
+```{r}
+set.seed(19)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.75), alpha = .2, num_iter = 600)
+```
+
+```{r}
+set.seed(20)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.73), alpha = .2, num_iter = 700)
+```
+```{r}
+set.seed(21)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.7), alpha = .2, num_iter = 700)
+```
+
+```{r}
+set.seed(22)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.68), alpha = .2, num_iter = 800)
+```
+
+```{r}
+set.seed(23)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.67, 3.68), alpha = .2, num_iter = 1000)
+```
+
+```{r}
+set.seed(23)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.67, 3.68), alpha = .2, num_iter = 1000)
+```
+
+```{r}
+set.seed(25)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.66), alpha = .2, num_iter = 1000)
+```
+
+```{r}
+set.seed(26)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.66), alpha = .2, num_iter = 1500)
+```
+
+```{r}
+set.seed(27)
+run_bh_mcc_lfl_setting_simulation(a_vec = c(3.66), alpha = .2, num_iter = 400)
+```
+
+
+mcc calibration is $\beta^* \approx 3.63$ for 35% power.
+
+mcc calibration is $\beta^* \approx 3.66$ for 50% power.
+
+
 
 ## mcc block
 
@@ -588,6 +760,27 @@ run_bh_mcc_lfl_setting_simulation(type = 'IID_Normal', a_vec = c(.073), alpha = 
 ```
 
 for IID normal, we have $\beta^* \approx .073$. 
+
+
+```{r}
+set.seed(32)
+run_bh_mcc_lfl_setting_simulation(type = 'IID_Normal', a_vec = c(.075), alpha = .2, num_iter = 1000)
+```
+```{r}
+set.seed(32)
+run_bh_mcc_lfl_setting_simulation(type = 'IID_Normal', a_vec = c(.08), alpha = .2, num_iter = 400)
+```
+```{r}
+set.seed(33)
+run_bh_mcc_lfl_setting_simulation(type = 'IID_Normal', a_vec = c(.083), alpha = .2, num_iter = 500)
+```
+
+```{r}
+set.seed(34)
+run_bh_mcc_lfl_setting_simulation(type = 'IID_Normal', a_vec = c(.083), alpha = .2, num_iter = 1000)
+```
+
+$\beta^* \approx .083$ to achieve about 50% power for IID Normal setting. 
 
 ## X_AR
 
