--- a/ep-BH-moment-procedure-simulations.Rmd
+++ b/ep-BH-moment-procedure-simulations.Rmd
@@ -259,7 +259,11 @@ ep_moment_method1_3_sigma_setting1_m8 <- run_ep_moment_method1_3_sigma_setting1_
 
 
 ```{r}
-run_ep_moment_method_simulation <- function(n, d, a, num_true_sigs, num_iter = 500, moment = 2, dampen = FALSE){
+run_ep_moment_method_simulation <- function(n, d, a, num_true_sigs, num_iter = 500, 
+                                            moment = 2, 
+                                            dampen = FALSE, 
+                                            sigma = NULL,
+                                            multiplier = 1.9){
   # Sets up the regression problem with specified dimensions and number of true signals, all of which have
   # the same amplitude. 
   fdp_vec <- numeric(num_iter)
@@ -269,7 +273,9 @@ for (m in 1:num_iter){
   regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs)
   true_nonzero_indices <- regression$nonzero_indices
   rejected_indices <- ep_moment_method(regression$X, regression$Y, moment = moment, alpha = .05, 
-                                        dampen = dampen)
+                                        dampen = dampen, 
+                                       sigma = sigma,
+                                       multiplier = 1.9)
   num_rejections <- length(rejected_indices)
   num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
   num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
@@ -287,7 +293,9 @@ return(list(fdr = fdr, power = pwr))
 run_ep_moment_method_setting1_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               sigma = NULL,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -297,7 +305,9 @@ for (amp in a_vec){
                                           num_true_sigs = 8,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          sigma = sigma,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -309,7 +319,9 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 run_ep_moment_method_setting2_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               sigma = NULL,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -319,7 +331,9 @@ for (amp in a_vec){
                                           num_true_sigs = 10,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          sigma = sigma,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -331,7 +345,9 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 run_ep_moment_method_setting3_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               sigma = NULL,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -341,7 +357,9 @@ for (amp in a_vec){
                                           num_true_sigs = 20,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          sigma = sigma,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -353,7 +371,8 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 
 
 ```{r}
-run_ep_moment_method_alternate_simulation <- function(n, d, a, num_true_sigs, num_iter = 500, moment = 2, dampen = FALSE){
+run_ep_moment_method_alternate_simulation <- function(n, d, a, num_true_sigs, num_iter = 500, moment = 2, dampen = FALSE,
+                                                      multiplier = 1.9){
   # Sets up the regression problem with specified dimensions and number of true signals, all of which have
   # the same amplitude. 
   fdp_vec <- numeric(num_iter)
@@ -363,7 +382,8 @@ for (m in 1:num_iter){
   regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs)
   true_nonzero_indices <- regression$nonzero_indices
   rejected_indices <- ep_moment_method_alternate(regression$X, regression$Y, moment = moment, alpha = .05, 
-                                        dampen = dampen)
+                                        dampen = dampen,
+                                        multiplier = multiplier)
   num_rejections <- length(rejected_indices)
   num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
   num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
@@ -381,7 +401,8 @@ return(list(fdr = fdr, power = pwr))
 run_ep_moment_method_alternate_setting1_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -391,7 +412,8 @@ for (amp in a_vec){
                                           num_true_sigs = 8,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -403,7 +425,8 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 run_ep_moment_method_alternate_setting2_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -413,7 +436,8 @@ for (amp in a_vec){
                                           num_true_sigs = 10,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -426,7 +450,8 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 run_ep_moment_method_alternate_setting3_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500, 
                                                moment = 2,
-                                               dampen = FALSE){
+                                               dampen = FALSE,
+                                               multiplier = 1.9){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
@@ -436,7 +461,8 @@ for (amp in a_vec){
                                           num_true_sigs = 20,
                                           moment = moment,
                                           num_iter = num_iter,
-                                          dampen = dampen)
+                                          dampen = dampen,
+                                          multiplier = multiplier)
   result_vec_power <- c(result_vec_power, result$power)
   result_vec_fdr <- c(result_vec_fdr, result$fdr)
 }
@@ -475,6 +501,11 @@ set.seed(12)
 ep_moment_method_setting1_m4 <- run_ep_moment_method_setting1_simulation(moment = 4)
 ```
 
+
+```{r}
+set.seed(12)
+run_ep_moment_method_setting1_simulation(moment = 2)
+```
 
 # with dampening
 
@@ -515,3 +546,5 @@ ep_moment_method_alternate_setting1_m2 <- run_ep_moment_method_alternate_setting
 set.seed(12)
 ep_moment_method_alternate_setting2_m2 <- run_ep_moment_method_alternate_setting2_simulation(moment = 2)
 ```
+
+
