--- a/ep-moment-vs-method1-sigma-graphs-v4.Rmd
+++ b/ep-moment-vs-method1-sigma-graphs-v4.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "ep-moment-vs-method1-known-sigma"
 author: "Ethan Naegele"
 date: "2024-08-17"
 output: pdf_document
