--- a/Code-for-plots/ep-BH-cutoff-graphs-summary-v4.Rmd
+++ b/Code-for-plots/ep-BH-cutoff-graphs-summary-v4.Rmd
@@ -19,32 +19,32 @@ library(tidyverse)
 
 
 ```{r}
-combined_df_setting1_cutoff_replication_v4 <- ep_method1_cutoff_.1_setting1_v4 %>% 
-  full_join(ep_method1_cutoff_.2_setting1_v4 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.3_setting1_v4 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.4_setting1_v4 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.5_setting1_v4 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.6_setting1_v4 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.7_setting1_v4 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.8_setting1_v4 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.9_setting1_v4 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_1_setting1_v4 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
+combined_df_setting1_cutoff_replication <- ep_method1_cutoff_.1_setting1 %>% 
+  full_join(ep_method1_cutoff_.2_setting1 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.3_setting1 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.4_setting1 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.5_setting1 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.6_setting1 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.7_setting1 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.8_setting1 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.9_setting1 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_1_setting1 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
 
-combined_df_setting1_cutoff_replication_v4 <- combined_df_setting1_cutoff_replication_v4 %>% 
+combined_df_setting1_cutoff_replication <- combined_df_setting1_cutoff_replication %>% 
   rename(power_cutoff_.1 = power, fdr_cutoff_.1 = fdr)
 ```
 
 
 
 ```{r}
-long_df_power_setting1_cutoff_replication_v4 <- pivot_longer(combined_df_setting1_cutoff_replication_v4, 
+long_df_power_setting1_cutoff_replication <- pivot_longer(combined_df_setting1_cutoff_replication, 
                                                           cols = starts_with("power_cutoff_"), 
                                        names_to = "Cutoff", 
                                        values_to = "Power")
 ```
 
 ```{r}
-long_df_fdr_setting1_cutoff_replication_v4 <- pivot_longer(combined_df_setting1_cutoff_replication_v4, 
+long_df_fdr_setting1_cutoff_replication <- pivot_longer(combined_df_setting1_cutoff_replication, 
                                                         cols = c("fdr_cutoff_.1", 
                                                              "fdr_cutoff_.2",
                                                              'fdr_cutoff_.3',
@@ -67,56 +67,56 @@ library(RColorBrewer)
 custom_palette_function <- colorRampPalette(brewer.pal(9, "YlOrRd"))
 color_palette <- custom_palette_function(10)
 #color_palette <- c("#FFF7BC", color_palette)
-power_plot_summary_setting1_cutoff_replication_v4 <- ggplot(long_df_power_setting1_cutoff_replication_v4, aes(x = a, y = Power, color = Cutoff)) +
+power_plot_summary_setting1_cutoff_replication <- ggplot(long_df_power_setting1_cutoff_replication, aes(x = a, y = Power, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, 1)) + 
   labs(title = "Simulated Power Across Different Cutoffs - Setting 1 (n = 200, d = 40, k = 8)", x = "Signal Strength - Amplitude", y = "Simulated Power") 
-print(power_plot_summary_setting1_cutoff_replication_v4)
-ggsave(filename = 'power_plot_summary_setting1_cutoff_replication_v4.pdf', 
-       plot = power_plot_summary_setting1_cutoff_replication_v4)
+print(power_plot_summary_setting1_cutoff_replication)
+ggsave(filename = 'power_plot_summary_setting1_cutoff_replication.pdf', 
+       plot = power_plot_summary_setting1_cutoff_replication)
 ```
 
 ```{r}
-fdr_plot_summary_setting1_cutoff_replication_v4 <- ggplot(long_df_fdr_setting1_cutoff_replication_v4, aes(x = a, y = FDR, color = Cutoff)) +
+fdr_plot_summary_setting1_cutoff_replication <- ggplot(long_df_fdr_setting1_cutoff_replication, aes(x = a, y = FDR, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, .15)) + 
   labs(title = "Simulated FDR Across Different Cutoffs - Setting 1 (n = 200, d = 40, k = 8)", x = "Signal Strength - Amplitude", y = "Simulated FDR") 
-print(fdr_plot_summary_setting1_cutoff_replication_v4)
-ggsave(filename = 'fdr_plot_summary_setting1_cutoff_replication_v4.pdf', plot = fdr_plot_summary_setting1_cutoff_replication_v4)
+print(fdr_plot_summary_setting1_cutoff_replication)
+ggsave(filename = 'fdr_plot_summary_setting1_cutoff_replication.pdf', plot = fdr_plot_summary_setting1_cutoff_replication)
 ```
 
 # Setting 2 cutoff comparison
 
 ```{r}
-combined_df_setting2_cutoff_replication_v4 <- ep_method1_cutoff_.1_setting2_v4 %>% 
-  full_join(ep_method1_cutoff_.2_setting2_v4 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.3_setting2_v4 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.4_setting2_v4 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.5_setting2_v4 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.6_setting2_v4 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.7_setting2_v4 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.8_setting2_v4 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.9_setting2_v4 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_1_setting2_v4 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
+combined_df_setting2_cutoff_replication <- ep_method1_cutoff_.1_setting2 %>% 
+  full_join(ep_method1_cutoff_.2_setting2 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.3_setting2 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.4_setting2 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.5_setting2 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.6_setting2 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.7_setting2 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.8_setting2 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.9_setting2 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_1_setting2 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
 
-combined_df_setting2_cutoff_replication_v4 <- combined_df_setting2_cutoff_replication_v4 %>% 
+combined_df_setting2_cutoff_replication <- combined_df_setting2_cutoff_replication %>% 
   rename(power_cutoff_.1 = power, fdr_cutoff_.1 = fdr)
 ```
 
 
 ```{r}
-long_df_power_setting2_cutoff_replication_v4 <- pivot_longer(combined_df_setting2_cutoff_replication_v4, 
+long_df_power_setting2_cutoff_replication <- pivot_longer(combined_df_setting2_cutoff_replication, 
                                                           cols = starts_with("power_cutoff_"), 
                                        names_to = "Cutoff", 
                                        values_to = "Power")
 ```
 
 ```{r}
-long_df_fdr_setting2_cutoff_replication_v4 <- pivot_longer(combined_df_setting2_cutoff_replication_v4, 
+long_df_fdr_setting2_cutoff_replication <- pivot_longer(combined_df_setting2_cutoff_replication, 
                                                         cols = c("fdr_cutoff_.1", 
                                                              "fdr_cutoff_.2",
                                                              'fdr_cutoff_.3',
@@ -138,56 +138,56 @@ library(RColorBrewer)
 custom_palette_function <- colorRampPalette(brewer.pal(9, "YlOrRd"))
 color_palette <- custom_palette_function(10)
 #color_palette <- c("#FFF7BC", color_palette)
-power_plot_summary_setting2_cutoff_replication_v4 <- ggplot(long_df_power_setting2_cutoff_replication_v4, aes(x = a, y = Power, color = Cutoff)) +
+power_plot_summary_setting2_cutoff_replication <- ggplot(long_df_power_setting2_cutoff_replication, aes(x = a, y = Power, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, 1)) + 
   labs(title = "Simulated Power Across Different Cutoffs - Setting 2 (n = 500, d = 50, k = 10)", x = "Signal Strength - Amplitude", y = "Simulated Power") 
-print(power_plot_summary_setting2_cutoff_replication_v4)
-ggsave(filename = 'power_plot_summary_setting2_cutoff_replication_v4.pdf', plot = power_plot_summary_setting2_cutoff_replication_v4)
+print(power_plot_summary_setting2_cutoff_replication)
+ggsave(filename = 'power_plot_summary_setting2_cutoff_replication.pdf', plot = power_plot_summary_setting2_cutoff_replication)
 ```
 
 ```{r}
-fdr_plot_summary_setting2_cutoff_replication_v4 <- ggplot(long_df_fdr_setting2_cutoff_replication_v4, aes(x = a, y = FDR, color = Cutoff)) +
+fdr_plot_summary_setting2_cutoff_replication <- ggplot(long_df_fdr_setting2_cutoff_replication, aes(x = a, y = FDR, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, .15)) + 
   labs(title = "Simulated FDR Across Different Cutoffs - Setting 2 (n = 500, d = 50, k = 10)", x = "Signal Strength - Amplitude", y = "Simulated FDR") 
-print(fdr_plot_summary_setting2_cutoff_replication_v4)
-ggsave(filename = 'fdr_plot_summary_setting2_cutoff_replication_v4.pdf', plot = fdr_plot_summary_setting2_cutoff_replication_v4)
+print(fdr_plot_summary_setting2_cutoff_replication)
+ggsave(filename = 'fdr_plot_summary_setting2_cutoff_replication.pdf', plot = fdr_plot_summary_setting2_cutoff_replication)
 ```
 
 # Setting 3 cutoff comparison
 
 
 ```{r}
-combined_df_setting3_cutoff_replication_v4 <- ep_method1_cutoff_.1_setting3_v4 %>% 
-  full_join(ep_method1_cutoff_.2_setting3_v4 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.3_setting3_v4 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.4_setting3_v4 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.5_setting3_v4 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.6_setting3_v4 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.7_setting3_v4 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.8_setting3_v4 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_.9_setting3_v4 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
-  full_join(ep_method1_cutoff_1_setting3_v4 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
+combined_df_setting3_cutoff_replication <- ep_method1_cutoff_.1_setting3 %>% 
+  full_join(ep_method1_cutoff_.2_setting3 %>% rename(power_cutoff_.2 = power, fdr_cutoff_.2 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.3_setting3 %>% rename(power_cutoff_.3 = power, fdr_cutoff_.3 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.4_setting3 %>% rename(power_cutoff_.4 = power, fdr_cutoff_.4 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.5_setting3 %>% rename(power_cutoff_.5 = power, fdr_cutoff_.5 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.6_setting3 %>% rename(power_cutoff_.6 = power, fdr_cutoff_.6 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.7_setting3 %>% rename(power_cutoff_.7 = power, fdr_cutoff_.7 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.8_setting3 %>% rename(power_cutoff_.8 = power, fdr_cutoff_.8 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_.9_setting3 %>% rename(power_cutoff_.9 = power, fdr_cutoff_.9 = fdr), by = 'a') %>% 
+  full_join(ep_method1_cutoff_1_setting3 %>% rename(power_cutoff_1 = power, fdr_cutoff_1 = fdr), by = 'a')
 
-combined_df_setting3_cutoff_replication_v4 <- combined_df_setting3_cutoff_replication_v4 %>% 
+combined_df_setting3_cutoff_replication <- combined_df_setting3_cutoff_replication %>% 
   rename(power_cutoff_.1 = power, fdr_cutoff_.1 = fdr)
 ```
 
 
 ```{r}
-long_df_power_setting3_cutoff_replication_v4 <- pivot_longer(combined_df_setting3_cutoff_replication_v4, 
+long_df_power_setting3_cutoff_replication <- pivot_longer(combined_df_setting3_cutoff_replication, 
                                                           cols = starts_with("power_cutoff_"), 
                                        names_to = "Cutoff", 
                                        values_to = "Power")
 ```
 
 ```{r}
-long_df_fdr_setting3_cutoff_replication_v4 <- pivot_longer(combined_df_setting3_cutoff_replication_v4, 
+long_df_fdr_setting3_cutoff_replication <- pivot_longer(combined_df_setting3_cutoff_replication, 
                                                         cols = c("fdr_cutoff_.1", 
                                                              "fdr_cutoff_.2",
                                                              'fdr_cutoff_.3',
@@ -209,24 +209,24 @@ library(RColorBrewer)
 custom_palette_function <- colorRampPalette(brewer.pal(9, "YlOrRd"))
 color_palette <- custom_palette_function(10)
 #color_palette <- c("#FFF7BC", color_palette)
-power_plot_summary_setting3_cutoff_replication_v4 <- ggplot(long_df_power_setting3_cutoff_replication_v4, aes(x = a, y = Power, color = Cutoff)) +
+power_plot_summary_setting3_cutoff_replication <- ggplot(long_df_power_setting3_cutoff_replication, aes(x = a, y = Power, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, 1)) + 
   labs(title = "Simulated Power Across Different Cutoffs - Setting 3 (n = 1000, d = 100, k = 20)", x = "Signal Strength - Amplitude", y = "Simulated Power") 
-print(power_plot_summary_setting3_cutoff_replication_v4)
-ggsave(filename = 'power_plot_summary_setting3_cutoff_replication_v4.pdf', plot = power_plot_summary_setting3_cutoff_replication_v4)
+print(power_plot_summary_setting3_cutoff_replication)
+ggsave(filename = 'power_plot_summary_setting3_cutoff_replication.pdf', plot = power_plot_summary_setting3_cutoff_replication)
 ```
 
 ```{r}
-fdr_plot_summary_setting3_cutoff_replication_v4 <- ggplot(long_df_fdr_setting3_cutoff_replication_v4, aes(x = a, y = FDR, color = Cutoff)) +
+fdr_plot_summary_setting3_cutoff_replication <- ggplot(long_df_fdr_setting3_cutoff_replication, aes(x = a, y = FDR, color = Cutoff)) +
   geom_line() +
   geom_point() +
   scale_color_manual(values = color_palette) +
   scale_y_continuous(limits = c(0, .15)) + 
   labs(title = "Simulated FDR Across Different Cutoffs - Setting 3 (n = 1000, d = 100, k = 20)", x = "Signal Strength - Amplitude", y = "Simulated FDR") 
-print(fdr_plot_summary_setting3_cutoff_replication_v4)
-ggsave(filename = 'fdr_plot_summary_setting3_cutoff_replication_v4.pdf', plot = fdr_plot_summary_setting3_cutoff_replication_v4)
+print(fdr_plot_summary_setting3_cutoff_replication)
+ggsave(filename = 'fdr_plot_summary_setting3_cutoff_replication.pdf', plot = fdr_plot_summary_setting3_cutoff_replication)
 ```
 
